# measurement-instruments-python

./: .gitignore  Consulta a DB Qcodes-single-window.ipynb  Consulta a DB Qcodes.ipynb  GUIdemo.ipynb  Instrument.py  Instruments.py  LICENSE  LucasHelpModule.py  MeasureCavity.py  OneToneController.py  QCodes_teste.ipynb  README.md  experiment_example.py  instruments-classes.py  lab_qcodes.py
OneToneQt/: OneToneQt.sln  simulation_instrument.py
OneToneQt/CustomPythonLib/: CustomPythonLib.cpp  CustomPythonLib.h  CustomPythonLib.vcxproj  CustomPythonLib.vcxproj.filters
OneToneQt/OneToneQt/: CMakeLists.txt  OneToneQt.cpp  OneToneQt.h  OneToneQt.qrc  OneToneQt.ui  OneToneQt.ui.autosave  OneToneQt.vcxproj  OneToneQt.vcxproj.filters  PythonThread.cpp  PythonThread.h  datatype.h  dataype.h  main.cpp
OneToneSimple/: OneToneSimple.sln
OneToneSimple/OneToneSimple/: OneToneSimple.vcxproj  OneToneSimple.vcxproj.filters  heterodynethread.cpp  heterodynethread.h  main.cpp  onetonedatamodel.h  onetonesimple.cpp  onetonesimple.h  onetonesimple.qrc  onetonesimple.ui
One_Tone/: .One_Tone.py.swp  .example.py.swp  OneTone.db  OneTone.db-shm  OneTone.db-wal  One_Tone.ipynb  One_Tone.py  One_Tone_GUI.py  depedencies.txt  example.ipynb  example.py  pcolor.py  save.ini  start.sh
PiPulseQt/: PiPulseQt.sln
PiPulseQt/PiPulseQt/: PiPulseQt.cpp  PiPulseQt.h  PiPulseQt.qrc  PiPulseQt.ui  PiPulseQt.vcxproj  PiPulseQt.vcxproj.filters  ProcessThread.cpp  ProcessThread.h  datatype.h  dataype.h  main.cpp
experiment_test/: test.toml
qcodes_version/: QCodes_teste.ipynb  README.md
(+17 files in other folders)
